# holymeal

./: .env.example  .gitignore  .windsurfrules  LICENSE  README.md  aiogram_app.py  alembic.ini  flask_app.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_create_users_and_tokens_tables.py
app/database/: __init__.py  auth_token.py  base.py  db_session.py  user.py
app/decorators/: auth.py
app/models/: meal.py  shopping_list.py
app/routes/: auth_router.py  meal_routes.py  shopping_routes.py
app/services/: meal_service.py  prompt_service.py  shopping_service.py
app/utils/: logger.py  validators.py
config/: settings.py
docs/: commit_guidelines.md  development_plan.md  lovable_prompt.md  technical_documentation.md
static/: style.css
templates/: index.html  shopping_list.html
templates/errors/: 404.html  500.html
