[project]
name = "holymeal"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=2.15",
    "aiohttp>=3.12.6",
    "anthropic>=0.52.2",
    "flask[async]>=3.1.1",
    "python-dotenv>=1.1.0",
    "python-json-logger>=3.3.0",
]
